syntax = "proto3";

package protocol;

message GameState {
    EGamePhase phase = 1;
    State initial_state = 2;
    repeated Round rounds = 3;
}

enum EGamePhase {
    INITIAL = 0;
    PREPARATION = 1;
    RUNNING = 2;
    ENDED = 3;
}

message Round {
    uint32 id = 1;
    ERoundPhase phase = 2;
    State state = 3;
}

enum ERoundPhase {
    INITIALIZATION = 0;
    PROGRAMMING = 1;
    EXECUTION = 2;
    CLEANUP = 3;
    DONE = 4;
}

message State {
    Board board = 1;
    repeated Player players = 2;
}

message Board {
    repeated Tile tiles = 1;
    int32 size_x = 2;
    int32 size_y = 3;
}

message Tile {
    Position position = 1;
    ETileType type = 2;
    repeated EDirection walls = 3;
}

enum ETileType {
    REGULAR = 0;
    NO_TILE = 1;
}

message Position {
    int32 x = 1;
    int32 y = 2;
}

message Player {
    uint32 id = 1;
    Robot robot = 2;
}

message Robot {
    uint32 id = 1;
    Position position = 2;
    EDirection direction = 3;
    uint32 damage = 4;
    uint32 life_tokens = 5;
}

enum EDirection {
    NORTH = 0;
    EAST = 1;
    SOUTH = 2;
    WEST = 3;
}